<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018 The LineageOS Project
     Copyright (C) 2022 CannedShroud
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="parasite_settings_title">More Settings</string>

    <!-- Advanced Settings -->
    <string name="advanced_pref_title">Advanced Settings</string>
    <string name="advanced_backup_title">Backup</string>

    <!-- Unlimited g00gle ph0t0s st0rage -->
    <string name="unlimited_photos_storage_title">Unlimited Google Photos storage</string>
    <string name="unlimited_photos_storage_summary">Unlimited storage for backup photos. Google Photos’ new features will not be available.</string>

    <!-- Button Settings -->
    <string name="button_pref_title">Button Settings</string>

    <!-- Display Settings -->
    <string name="display_pref_title">Display Settings</string>

    <!-- Gesture Settings -->
    <string name="gesture_pref_title">Gesture Settings</string>

    <!-- Wake on plug -->
    <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>

    <!-- Sound Settings -->
    <string name="sound_pref_title">Sound Settings</string>

    <!-- Annoying Notifications -->
    <string name="notification_sound_vib_screen_on_title">Annoying Notifications</string>
    <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>

    <!-- Incall vibrate options -->
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>

    <!-- Security Settings -->
    <string name="security_pref_title">Security Settings</string>

    <!-- Application downgrade -->
    <string name="app_downgrade_title">Allow application downgrade</string>
    <string name="app_downgrade_summary">Permit to downgrading applications. May lead to crashes and data corruption.</string>

    <!-- Ignore window secure -->
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">Remove the screenshots and screenrecords limits for all applications. Can be convenient in some cases but may lead to privacy leaks. Need to restart applications for the change to take effect.</string>

    <!-- [CHAR LIMIT=NONE] Menu for manage apps to control whether system processes are shown -->
    <string name="menu_show_system">Show system</string>
    <!-- [CHAR LIMIT=NONE] Menu for manage apps to control whether system processes are hidden -->
    <string name="menu_hide_system">Hide system</string>

    <!-- App search preference -->
    <string name="search">Search</string>
    <string name="search_apps">Search apps</string>

    <!-- Notch: Full screen apps -->
    <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
    <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>

    <!-- Hide developer status -->
    <string name="hide_developer_status_title">Hide developer status</string>
    <string name="hide_developer_status_summary">Hide developer status from apps</string>

    <!-- Spoof storage encryption status -->
    <string name="spoof_storage_encryption_status_title">Use storage encryption spoofing</string>
    <string name="spoof_storage_encryption_status_summary">Spoof storage encryption status to encrypted</string>

    <!-- fingerprint lockout -->
    <string name="fingerprint_lockout_title">Disable fingerprint lockout</string>
    <string name="fingerprint_lockout_summary">Deactivates 30 second timeout as well as permanent lockout after multiple failed fingerprint unlock attempts</string>

    <!-- Fuel Gauge Settings -->
    <string name="fuelgauge_pref_title">Battery</string>

</resources>
