<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="security_settings"
        android:title="@string/security_pref_title">

    <com.android.settings.custom.preference.GlobalSettingSwitchPreference
        android:order="91"
        android:key="pm_downgrade_allowed"
        android:title="@string/app_downgrade_title"
        android:summary="@string/app_downgrade_summary"
        android:defaultValue="false"/>

    <com.android.settings.custom.preference.SecureSettingSwitchPreference
        android:order="92"
        android:key="window_ignore_secure"
        android:title="@string/ignore_window_secure_title"
        android:summary="@string/ignore_window_secure_summary"
        android:defaultValue="false"/>

    <com.android.settings.custom.preference.SecureSettingSwitchPreference
        android:order="93"
        android:key="spoof_storage_encryption_status"
        android:title="@string/spoof_storage_encryption_status_title"
        android:summary="@string/spoof_storage_encryption_status_summary"
        android:defaultValue="false"/>

    <Preference
        android:order="94"
        android:key="hide_developer_status_settings"
        android:title="@string/hide_developer_status_title"
        android:summary="@string/hide_developer_status_summary">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.settings.custom.security.hidedevstatus.HideDeveloperStatusPreferenceActivity"
            android:targetPackage="com.android.settings.custom" />
    </Preference>

    <com.android.settings.custom.preference.SystemSettingSwitchPreference
        android:key="fingerprint_lockout"
        android:title="@string/fingerprint_lockout_title"
        android:summary="@string/fingerprint_lockout_summary"
        android:defaultValue="false" />
</PreferenceScreen>
