<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="sound_settings"
        android:title="@string/sound_pref_title">

    <com.android.settings.custom.preference.SystemSettingSwitchPreference
        android:key="notification_sound_vib_screen_on"
        android:title="@string/notification_sound_vib_screen_on_title"
        android:summary="@string/notification_sound_vib_screen_on_summary"
        android:defaultValue="true" />

    <!-- Incall vibration options -->
    <PreferenceCategory
        android:key="accessibility_incall_vibration_category"
        android:title="@string/incall_vibration_category">

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_connect"
            android:title="@string/incall_vibrate_connect_title"
            android:defaultValue="true" />

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_callwaiting"
            android:title="@string/incall_vibrate_call_wait_title"
            android:defaultValue="true" />

        <com.android.settings.custom.preference.SystemSettingSwitchPreference
            android:key="vibrate_on_disconnect"
            android:title="@string/incall_vibrate_disconnect_title"
            android:defaultValue="true" />

    </PreferenceCategory>

</PreferenceScreen>
