<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:key="display_settings"
        android:title="@string/display_pref_title">

    <com.android.settings.custom.preference.GlobalSettingSwitchPreference
        android:key="wake_when_plugged_or_unplugged"
        android:title="@string/wake_when_plugged_or_unplugged_title"
        android:summary="@string/wake_when_plugged_or_unplugged_summary"
        android:defaultValue="@*android:bool/config_unplugTurnsOnScreen" />

    <Preference
        android:key="display_cutout_force_fullscreen_settings"
        android:title="@string/display_cutout_force_fullscreen_title"
        android:summary="@string/display_cutout_force_fullscreen_summary">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetClass="com.android.settings.custom.display.cutout.DisplayCutoutForceFullscreenSettingsActivity"
            android:targetPackage="com.android.settings.custom" />
    </Preference>

</PreferenceScreen>
